--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,7 +8,6 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/mystyle.css" />
-    <link rel="stylesheet" href="~/lib/fontawesome/fontawesome-free-5.15.4-web/css/all.css">
 </head>
 <body>
     <header>
@@ -33,7 +33,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Utilisateurs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Pets" asp-action="Index">Mes animaux</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pets" asp-action="Index">Mes animaux</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Chat" asp-action="Index">Chat</a>
@@ -52,20 +52,21 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+@RenderBody()
+</main>
+</div>
 
-    <section class="section-footer">
-        <footer class="border-top footer text-muted">
-            <div class="container">
-                &copy; 2021 - web3_tp_final - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </div>
-        </footer>
-    </section>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+<section class="section-footer">
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2021 - web3_tp_final - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+    </footer>
+</section>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
