--- a/web3_tp_final/web3_tp_final/wwwroot/css/SignUp/SignUp.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/SignUp/SignUp.css
@@ -1,4 +1,4 @@
-﻿button,
+﻿﻿button,
 input {
     font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
 }
@@ -566,6 +566,10 @@ p {
     content: "\ea3e";
 }
 
+.now-ui-icons.ui-1_lock-circle-open:before {
+    content: "\ea35";
+}
+
 .navbar {
     padding-top: 0.625rem;
     padding-bottom: 0.625rem;
@@ -662,11 +666,17 @@ p {
     }
 
     .navbar.navbar-transparent {
-        background-color: transparent !important;
+        background-color: rgb(161 187 220 / 38%) !important;
         box-shadow: none;
         color: #FFFFFF;
         padding-top: 20px !important;
     }
+
+.footer {
+    background-color: rgb(161 187 220 / 70%) !important;
+    box-shadow: none;
+    color: #FFFFFF;
+}
 
 .bg-primary {
     background-color: #f96332 !important;
@@ -910,6 +920,7 @@ img {
 .blur {
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(8px);
+    height: 100vh;
 }
 
 [data-background-color="orange"] {
