--- a/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
@@ -19,7 +19,7 @@
         int numberOfRows = Convert.ToInt32(Math.Ceiling(Convert.ToDouble(numberOfPets) / Convert.ToDouble(numberOfColumns)));
         if (numberOfPets > 0)
         {
-            for (int j = numberOfRows; j > 0; j--)
+            for (int j = 0; j < numberOfRows; j++)
             {
                 @:<div class="row pt-3">
                     for (int i = 0; i < numberOfColumns; i++)
@@ -50,7 +50,7 @@
                             }
                             else
                             {
-                                i = 3;
+                                break;
                             }
                         @:</div>
                     }
