--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -30,15 +30,12 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item website-navbar-link">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Sitter" asp-action="Index">Devenir gardien</a>
-                        </li>
-                        <li class="nav-item website-navbar-link">
                             <a class="nav-link text-white" asp-area="" asp-controller="FindSitter" asp-action="Index">Trouver un gardien</a>
                         </li>
                         @if (ViewBag.CurrentUser != null)
                         {
                             <li class="nav-item website-navbar-link">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="BecomeSitter">Devenir gardien</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Sitter" asp-action="Index">Devenir gardien</a>
                             </li>
                             <li class="nav-item website-navbar-link">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Pets" asp-action="Index">Mes animaux</a>
@@ -83,6 +80,9 @@
                                     <a class="dropdown-item" asp-controller="Login" asp-action="LogOut">Log Out</a>
                                 </div>
                             </li>
+                            <li class="nav-item website-navbar-link">
+                                <a class="nav-link text-white" href="/Users/@ViewBag.CurrentUser.UserID/Appointments">Périodes de gardiennage</a>
+                            </li>
                         }
                         else
                         {
@@ -90,9 +90,6 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Index">Connexion</a>
                             </li>
                         }
-                        <li class="nav-item website-navbar-link">
-                            <a class="nav-link text-white" href="/Users/@user.UserID/Appointments">Périodes de gardiennage</a>
-                        </li>
                         <li class="nav-item website-navbar-link">
                             <a class="nav-link text-white" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook">
                                 <i class="fab fa-facebook-square"></i>
